# hexlet-django-blog

./: Makefile  db.sqlite3  manage.py  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
templates/: about.html  base.html  index.html
templates/articles/: articles.html  delete.html  index.html  show.html
