[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["ai_gelios <ai_gelios@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
